--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --hot --mode development",
     "dev": "webpack serve --open --hot --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "startDev": "webpack serve --open & nodemon server/server.js"
   },
   "keywords": [],
   "author": "",
