--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --hot --mode development",
-    "dev": "webpack serve --open --hot --mode development",
+    "dev": "webpack serve --open --hot --mode development & nodemon server/server.js",
     "build": "webpack --mode production",
     "startDev": "webpack serve --open & nodemon server/server.js"
   },
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.0",
     "react": "^18.2.0",
