--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
     "styled-components": "^5.3.11"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
